--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="container">
 	<div class="row" height='60%'>
 		<div class="col-xs-12" >
+			<h1>7 Day Historical Data</h1>
 			<img src="images/7day.jpg" width='100%'>
 		</div>
 	</div>
