--- a/index.html
+++ b/index.html
@@ -14,8 +14,26 @@
 <div class="container">
 	<div class="row" height='60%'>
 		<div class="col-xs-12" >
-			<h1>7 Day Historical Data</h1>
+			<h1>24 Hours</h1>
+			<img src="images/1day.jpg" width='100%'>
+		</div>
+	</div>
+	<div class="row" height='60%'>
+		<div class="col-xs-12" >
+			<h1>7 Days</h1>
 			<img src="images/7day.jpg" width='100%'>
+		</div>
+	</div>
+	<div class="row" height='60%'>
+		<div class="col-xs-12" >
+			<h1>30 Days</h1>
+			<img src="images/30day.jpg" width='100%'>
+		</div>
+	</div>
+	<div class="row" height='60%'>
+		<div class="col-xs-12" >
+			<h1>90 Days</h1>
+			<img src="images/90day.jpg" width='100%'>
 		</div>
 	</div>
 </div>
