--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Harlem Air Quality</title>
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<head>
-	<title>Harlem Air Quality</title>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-	
-<body>
-<div class="container">
-	<div id="my_dataviz"></div>
-</div>
+  <body>
+    <div class="container">
+      <div id="my_dataviz"></div>
+    </div>
 
-<script src="https://d3js.org/d3.v4.js"></script>
-<script>
-// With help from
-//   - https://www.d3-graph-gallery.com/graph/scatter_basic.html
-//   - https://gramener.github.io/d3js-playbook/scatter.html
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script>
+      // With help from
+      //   - https://www.d3-graph-gallery.com/graph/scatter_basic.html
+      //   - https://gramener.github.io/d3js-playbook/scatter.html
 
-// set the dimensions and margins of the graph
-const margin = {top: 10, right: 30, bottom: 30, left: 60},
-    width = 460 - margin.left - margin.right,
-	height = 400 - margin.top - margin.bottom,
-	// https://stackoverflow.com/a/20645375/5666087
-	timeFormat = d3.timeFormat("%I:%M %p %a %Y");
+      // set the dimensions and margins of the graph
+      const margin = { top: 10, right: 30, bottom: 30, left: 60 },
+        width = 460 - margin.left - margin.right,
+        height = 400 - margin.top - margin.bottom,
+        // https://stackoverflow.com/a/20645375/5666087
+        timeFormat = d3.timeFormat("%I:%M %p %a %Y");
 
-// append the svg object to the body of the page
-const svg = d3.select("#my_dataviz")
-  .append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform",
-          "translate(" + margin.left + "," + margin.top + ")");
+      // append the svg object to the body of the page
+      const svg = d3
+        .select("#my_dataviz")
+        .append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-// Read the data
-d3.csv("data.csv", data => {
+      // Read the data
+      d3.csv("data.csv", (data) => {
+        // Add X axis
+        const x = d3
+          .scaleTime()
+          .domain(d3.extent(data, (d) => d.timestamp))
+          .range([0, width]);
+        svg
+          .append("g")
+          .attr("transform", "translate(0," + height + ")")
+          .call(d3.axisBottom(x));
 
-  // Add X axis
-  const x = d3.scaleTime()
-  	.domain(d3.extent(data, d => d.timestamp))
-	.range([ 0, width ]);
-  svg.append("g")
-    .attr("transform", "translate(0," + height + ")")
-	.call(d3.axisBottom(x));
+        // Add Y axis
+        const y = d3
+          .scaleLinear()
+          .domain(d3.extent(data, (d) => d.concentration))
+          .range([height, 0]);
+        svg.append("g").call(d3.axisLeft(y));
 
-  // Add Y axis
-  const y = d3.scaleLinear()
-    .domain(d3.extent(data, d => d.concentration))
-    .range([ height, 0]);
-  svg.append("g")
-    .call(d3.axisLeft(y));
-
-  // Add dots
-  svg.append('g')
-    .selectAll("dot")
-    .data(data)
-    .enter()
-    .append("circle")
-      .attr("cx", function (d) { return x(d.timestamp); } )
-      .attr("cy", function (d) { return y(d.concentration); } )
-      .attr("r", 1.5)
-      .style("fill", "#69b3a2")
-
-})
-
-</script>
-</body>
+        // Add dots
+        svg
+          .append("g")
+          .selectAll("dot")
+          .data(data)
+          .enter()
+          .append("circle")
+          .attr("cx", function (d) {
+            return x(d.timestamp);
+          })
+          .attr("cy", function (d) {
+            return y(d.concentration);
+          })
+          .attr("r", 1.5)
+          .style("fill", "#69b3a2");
+      });
+    </script>
+  </body>
 </html>
