--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           .attr("y", 6)
           .attr("dy", ".75em")
           .attr("transform", "rotate(-90)")
-          .text("Particles > 1 μm, counts / ft^3");
+          .text("Particle (> 1 μm) counts per cubic foot");
         // Plot data.
         svg
           .append("g")
