--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             return y(d.concentration);
           })
           .attr("r", 1)
-          .style("fill", "#FFFFF");
+          .style("fill", "grey");
       });
     </script>
   </body>
