--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         svg.append("rect")
           .attr("width", "100%")
           .attr("height", "100%")
-          .attr("fill", "black");
+          .attr("fill", "grey");
         svg
           .append("g")
           .attr("transform", `translate(0, ${height})`)
@@ -96,7 +96,7 @@
             return y(d.concentration);
           })
           .attr("r", 1)
-          .style("fill", "grey");
+          .style("fill", "black");
       });
     </script>
   </body>
