--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
   <body>
     <div class="container">
+      <center>
+        <h2>Air quality @ St. Nicholas Park, NYC</h2>
+      </center>
       <div id="plot"></div>
     </div>
 
