--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       //   - https://gramener.github.io/d3js-playbook/scatter.html
 
       // set the dimensions and margins of the graph
-      const margin = { top: 25, right: 20, bottom: 35, left: 60 },
-        height = 600,
-        width = 954;
+      const margin = { top: 25, right: 20, bottom: 45, left: 60 },
+        height = 50%,
+        width = 80%;
 
       // append the svg object to the body of the page
       const svg = d3
