--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
       <center>
         <h2>Air quality @ St. Nicholas Park, NYC</h2>
       </center>
-      <div id="plot"></div>
     </div>
-
-  <iframe src="plot.html"
-      sandbox="allow-same-origin allow-scripts"
-      width="100%"
-      height="500"
-      scrolling="no"
-      seamless="seamless"
-      frameborder="0">
-  </iframe>
-
+    <center>
+      <iframe src="plot.html"
+          sandbox="allow-same-origin allow-scripts"
+          width="100%"
+          height="500"
+          scrolling="no"
+          seamless="seamless"
+          frameborder="0">
+      </iframe>
+    </center>
   </body>
 </html>
