--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <iframe src="plot.html"
           sandbox="allow-same-origin allow-scripts"
           width="100%"
-          height="500"
+          height="100%"
           scrolling="no"
           seamless="seamless"
           frameborder="0">
