--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h2>Air quality @ St. Nicholas Park, NYC</h2>
         <iframe src="plot.html"
             sandbox="allow-same-origin allow-scripts"
-            width="100%"
-            height="100%"
+            width="600px"
+            height="400px"
             scrolling="no"
             seamless="seamless"
             frameborder="0">
