--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <h2>Air quality @ St. Nicholas Park, NYC</h2>
         <iframe src="plot.html"
             sandbox="allow-same-origin allow-scripts"
-            width="600px"
-            height="400px"
+            width="100%"
+            height="600px"
             scrolling="no"
-            seamless="seamless"
-            frameborder="0">
+            frameborder="1">
         </iframe>
     </center>
   </body>
